--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "minesweeper-client",
   "version": "1.0.0",
   "private": true,
-  "homepage": "https://deleonn.github.io/minesweeper",
+  "homepage": "https://deleonn.github.io/minesweeper-client",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
